--- a/index.html
+++ b/index.html
@@ -7,27 +7,30 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div class="calculator">
-    <div class="display">0</div>
-    <button class="clear">Clear</button>
-    <button class="operator" value="+">+</button>
-    <button class="operator" value="-">-</button>
-    <button class="operator" value="*">&times;</button>
-    <button class="operator" value="/">÷</button>
-    <button class="number" value="7">7</button>
-    <button class="number" value="8">8</button>
-    <button class="number" value="9">9</button>
-    <button class="number" value="4">4</button>
-    <button class="number" value="5">5</button>
-    <button class="number" value="6">6</button>
-    <button class="number" value="1">1</button>
-    <button class="number" value="2">2</button>
-    <button class="number" value="3">3</button>
-    <button class="number" value="0">0</button>
-    <button class="decimal" value=".">.</button>
-    <button class="equals">=</button>
+  <div class="container">
+    <div class="calculator">
+      <div class="display">0</div>
+      <button class="clear">AC</button>
+      <button class="operator" value="+">+</button>
+      <button class="operator" value="-">-</button>
+      <button class="operator" value="*">&times;</button>
+      <button class="operator" value="/">÷</button>
+      <button class="number" value="7">7</button>
+      <button class="number" value="8">8</button>
+      <button class="number" value="9">9</button>
+      <button class="number" value="4">4</button>
+      <button class="number" value="5">5</button>
+      <button class="number" value="6">6</button>
+      <button class="number" value="1">1</button>
+      <button class="number" value="2">2</button>
+      <button class="number" value="3">3</button>
+      <button class="number" value="0">0</button>
+      <button class="decimal" value=".">.</button>
+      <button class="equals">=</button>
+    </div>
+    <footer>
+      <a href="https://github.com/apresinal/CalcultatorTOP" target="_blank">GitHub Repo - ANGELO</a>
+    </footer>
   </div>
-
-  <script src="script.js"></script>
 </body>
 </html>
