put script.js reference in html file
fix the html file to put the reference.

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       <button class="decimal" value=".">.</button>
       <button class="equals">=</button>
     </div>
+    <script src="script.js"></script>
     <footer>
       <a href="https://github.com/apresinal/CalcultatorTOP" target="_blank">GitHub Repo - ANGELO</a>
     </footer>
